# plugmux

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  mcp-gateway-spec.docx.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/65779-1774159700/: .server-stopped
agents/: TODO-more-agents.md  agents.json
assets/: logo-preview.html
catalog/: CONTRIBUTING.md  presets.json  servers.json
crates/plugmux-app/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/plugmux-app/src/: App.tsx
crates/plugmux-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/plugmux-app/src-tauri/capabilities/: default.json
crates/plugmux-app/src-tauri/icons/: icon.icns
crates/plugmux-app/src-tauri/src/: commands.rs  engine.rs  events.rs  lib.rs  main.rs  tray.rs  watcher.rs
crates/plugmux-app/src/components/agents/: AddAgentDialog.tsx  AgentIcon.tsx  AgentTable.tsx  DisableDialog.tsx  InstallDialog.tsx  ManualSetupDialog.tsx  SetupDialog.tsx
crates/plugmux-app/src/components/catalog/: CatalogCard.tsx  CatalogDetail.tsx  CategoryFilter.tsx  Pagination.tsx
crates/plugmux-app/src/hooks/: useAgents.ts  useCatalog.ts  useConfig.ts  useCustomServers.ts  useEngine.ts  useEvents.ts
crates/plugmux-app/src/lib/: commands.ts
crates/plugmux-app/src/pages/: AgentsPage.tsx  CatalogPage.tsx  DashboardPage.tsx  EnvironmentPage.tsx  LogsPage.tsx  MainPage.tsx  PresetsPage.tsx  SettingsPage.tsx
crates/plugmux-app/src/styles/: globals.css
crates/plugmux-cli/: Cargo.toml
crates/plugmux-cli/src/: main.rs
crates/plugmux-cli/src/commands/: agents.rs  catalog.rs  config.rs  custom.rs  env.rs  mod.rs  server.rs  start.rs  status.rs  stop.rs
crates/plugmux-cli/tests/: gateway_integration.rs
crates/plugmux-core/: Cargo.toml
crates/plugmux-core/src/: api_client.rs  catalog.rs  config.rs  custom_servers.rs  environment.rs  health.rs  lib.rs  manager.rs  migration.rs  pending_actions.rs  resolver.rs  server.rs  slug.rs
crates/plugmux-core/src/agents/: detect.rs  migrate.rs  mod.rs  registry.rs  state.rs
crates/plugmux-core/src/db/: active_agents.rs  agents.rs  bookmarks.rs  environments.rs  logs.rs  mod.rs
crates/plugmux-core/src/gateway/: agent_detect.rs  logging.rs  mod.rs  router.rs  tools.rs
crates/plugmux-core/src/plugmux_layer/: mod.rs  resources.rs  tools.rs
crates/plugmux-core/src/proxy/: http_sse.rs  mod.rs  stdio.rs
crates/plugmux-core/src/proxy_layer/: mod.rs  prompts.rs  relay.rs  resources.rs  tools.rs
docs/: agent-config-paths.md  mcp-catalog-v2.jsx
docs/superpowers/plans/: 2026-03-20-plugmux-phase1.md  2026-03-20-plugmux-phase2.md  2026-03-21-plugmux-phase3.md  2026-03-22-plugmux-phase4-agent-management.md  2026-03-23-mcp-protocol-refactor.md  2026-03-23-plugmux-api.md  2026-03-23-plugmux-client-sync.md  2026-03-25-sqlite-migration.md
docs/superpowers/specs/: 2026-03-20-plugmux-design.md  2026-03-20-plugmux-phase2-design.md  2026-03-21-plugmux-phase3-design.md  2026-03-22-plugmux-phase4-agent-management-design.md  2026-03-23-mcp-protocol-refactor-design.md  2026-03-23-plugmux-cloud-backend-design.md  2026-03-25-sqlite-migration-design.md
documents/research/: compass_artifact_wf-b7e09ba2-290b-401f-a35b-2b453fbe7fb1_text_markdown.md  mcp-registries-and-config.md
(+20 files in other folders)
