[package]
name = "plugmux-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "plugmux"
path = "src/main.rs"

[dependencies]
plugmux-core = { path = "../plugmux-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
