[package]
name = "plugmux-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
slug = "0.1"
thiserror = "2"
tracing = "0.1"
dirs = "6"
async-trait = "0.1"
axum = "0.8"
rmcp = { version = "1.2", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
