[package]
name = "plugmux-app"
version.workspace = true
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
plugmux-core = { path = "../../plugmux-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
notify = "7"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
